2018-09-12  Mark Wielaard  <mark@klomp.org>

	* aarch64_symbol.c (aarch64_check_special_symbol): Drop ehdr argument,
	use elf_getshdrstrndx.
	* alpha_symbol.c (alpha_check_special_symbol): Drop ehdr argument.
	* ppc64_symbol.c (ppc64_check_special_symbol): Likewise and use
	elf_getshdrstrndx.
	* ppc_symbol.c (ppc_check_special_symbol): Likewise.
	* riscv_symbol.c (riscv_check_special_symbol): Likewise.

2018-07-21  Andreas Schwab  <schwab@linux-m68k.org>

	* Makefile.am (m68k_SRCS): Add m68k_cfi.c and m68k_initreg.c.
	* m68k_cfi.c: New file.
	* m68k_initreg.c: New file.
	* m68k_init.c (m68k_init): Hook abi_cfi and
	set_initial_registers_tid.

2018-07-19  Andreas Schwab  <schwab@suse.de>

	* riscv_regs.c (riscv_register_info): Fix typo.

2018-07-17  Andreas Schwab  <schwab@suse.de>

	* Makefile.am (riscv_SRCS): Add riscv_corenote.c.
	* riscv_corenote.c: New file.
	* riscv_init.c (riscv_init): Hook core_note.

2018-07-11  Andreas Schwab  <schwab@suse.de>

	* Makefile.am (riscv_SRCS): Add riscv_initreg.c.
	* riscv_initreg.c: New file.
	* riscv_init.c (riscv_init): Hook set_initial_registers_tid.

2018-06-16  Yonghong Song  <yhs@fb.com>

	* Makefile.am (bpf_SRCS): Add bpf_symbol.c.
	* bpf_init.c (bpf_init): Add reloc_simple_type HOOK.
	* bpf_reloc.def: Add RELOC_TYPE 64_64 and 64_32.
	* bpf_symbol.c: New file.

2018-06-21  Mark Wielaard  <mark@klomp.org>

	* bpf_reloc.def: Remove MAP_FD.

2018-06-13  Andreas Schwab  <schwab@suse.de>

	* Makefile.am (riscv_SRCS): Add riscv_cfi.c and riscv_regs.c.
	* riscv_cfi.c: New file.
	* riscv_regs.c: Likewise.
	* riscv_init.c (riscv_init): Hook register_info and abi_cfi.

2018-05-15  Andreas Schwab  <schwab@suse.de>

	* riscv_init.c (riscv_init): Hook check_special_symbol.
	* riscv_symbol.c (riscv_check_special_symbol): New function.

2018-04-19  Andreas Schwab  <schwab@suse.de>

	* Makefile.am (modules): Add riscv.
	* riscv_init.c: New file.
	* riscv_reloc.def: New file.
	* riscv_symbol.c: New file.
